--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,8 +30,10 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Home</a>
-            <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/">soFrida</a>
+            <a href="{{ site.baseurl }}/stat">Statistics</a>
+            <a href="{{ site.baseurl }}/authors">Authors</a>
+            <a href="{{ site.baseurl }}/contact">Contact</a>
           </nav>
         </header>
       </div>
