--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">soFrida</a>
-            <a href="{{ site.baseurl }}/stat">Statistics</a>
+            <a href="{{ site.baseurl }}/statistics">Statistics</a>
             <a href="{{ site.baseurl }}/authors">Authors</a>
             <a href="{{ site.baseurl }}/contact">Contact</a>
           </nav>
