--- a/style.scss
+++ b/style.scss
@@ -374,7 +374,7 @@ body:after {
 
 .page h1{
   font-family: 'FuturaPTLight';
-  text-align: center;
+  text-align: left;
   font-weight: bold;
   font-kerning: auto;
   font-feature-settings: "kern","liga","dlig","hlig","cswh";
