--- a/style.scss
+++ b/style.scss
@@ -365,7 +365,7 @@ body:after {
 
 .post h1{
   font-family: 'FuturaPTLight';
-  text-align: center;
+  text-align: left;
   font-weight: bold;
   font-kerning: auto;
   font-feature-settings: "kern","liga","dlig","hlig","cswh";
@@ -382,7 +382,7 @@ body:after {
 }
 
 .author_title{
-  text-align: center;
+  text-align: left;
   color: #939aa1;
   letter-spacing: 2px;
 }
